Set navigation drawer icon to close in edit activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     </string-array>
 
     <string name="title_activity_maps">Map</string>
-    <string name="title_activity_edit">Edit AP</string>
+    <string name="title_activity_edit">Edit Access Point</string>
 
     <string name="hello_world">Hello world!</string>
 </resources>
