--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="app_name">WiFi Buddy</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="action_save">Save</string>
     <string name="action_scan">Scan nearby</string>
@@ -24,8 +23,9 @@
     <string name="profile_count_private">Private APs:</string>
     <string name="profile_count_public">Public APs:</string>
 
-    <string name="scan_label_password">Password:</string>
-    <string name="scan_label_publisher">Publisher:</string>
+    <string name="label_password">Password:</string>
+    <string name="label_updated">Updated on:</string>
+    <string name="label_publisher">Publisher:</string>
 
     <string name="scan_progress">Scanning nearby access points</string>
     <string name="scan_no_results">No results. Check if wireless is on</string>
@@ -35,6 +35,8 @@
     <string name="scan_connection_error">Authentication error occurred while connecting to the AP</string>
     <!-- The network's password might have been changed in the meantime. -->
     <string name="scan_connection_success">Successfully connected to the AP</string>
+    <string name="scan_bssid_different">The AP\'s id is different from the scan result, but the name is the same</string>
+    <string name="scan_name_different">The AP\'s name is different from the scan result, but the id is the same</string>
 
     <string name="scan_dialog_title">Enable WiFi connection?</string>
     <string name="scan_dialog_question">Your WiFi connection seems to be disabled.\nIt is required in order to scan nearby access points.</string>
