Fix DELETE pending update
Fix various uncaught exceptions that crashed MainActivity
Add DeleteRestRequest
Add location update by network provider
Add edit activity title
Refactor parser names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
 
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_edit">Edit Access Point</string>
+    <string name="title_activity_add">Add Access Point</string>
 
     <string name="hello_world">Hello world!</string>
 </resources>
