Add refresh option in public map

--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -30,6 +30,7 @@
     <!-- Action settings -->
     <string name="action_settings">Поставки</string>
     <string name="action_save">Сними</string>
+    <string name="action_sync">Sync</string>
     <string name="action_scan">Скенирај во близина</string>
 
     <string name="header_private">Приватни мрежи</string>
